manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s
  labels:
    app.kubernetes.io/name: k8s
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: k8s
          imagePullPolicy: IfNotPresent
          image: cadibob/k8s_django:v1.02
          ports:
          - containerPort: 80
            name: http
