manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s
  labels:
    app.kubernetes.io/name: k8s
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: k8s
    app.kubernetes.io/component: web
