manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: k8s
    app.kubernetes.io/component: web
spec:
  rules:
    - host: cadibob.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s
                port:
                  number: 80
